--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "react": "15.1.0",
-    "react-native": "0.28.0"
+    "react-native": "0.28.0",
+    "react-native-loading-spinner-overlay": "^0.1.2",
+    "react-native-vector-icons": "^2.0.3"
   }
 }
